--- a/package.json
+++ b/package.json
@@ -22,7 +22,21 @@
   "devDependencies": {
     "bower": "^1.6.3",
     "browser-sync": "^2.9.11",
+    "del": "^2.0.2",
     "gulp": "^3.9.0",
-    "run-sequence": "^1.1.4"
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.4.2",
+    "gulp-useref": "^1.3.0",
+    "gulp-util": "^3.0.7",
+    "run-sequence": "^1.1.4",
+    "vinyl-ftp": "^0.4.5",
+    "wiredep": "^2.2.2"
   }
 }
