--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gulp-filter": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
-    "gulp-minify-css": "^1.2.1",
+	"gulp-clean-css": "^2.0.12",
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.4.2",
